<resources>
    <string name="app_name">Work and Travel Society</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_forum">Forum</string>
    <string name="title_events">Events</string>
    <string name="wats_api_secured_path">http://localhost:8080/api</string>
    <string name="wats_api_public_path">https://workandtravelsociety.herokuapp.com/api/public/</string>
    <string name="connection_problem">Could not connect to the server, check you internet connection</string>

    <string name="def_person_name">Name</string>
    <string name="def_date">date</string>
    <string name="def_desc">Some description</string>

    <string name="comments">Comments:</string>
    <string name="answers">Answers:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Search places</string>
    <string name="title_activity_searchable">Searchable</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="log_in">Log in</string>

    <string name="preference_file_key">com.kote.martin.wats.PREFERENCE_FILE_KEY</string>
    <string name="preference_logged_username">logged_username</string>
    <string name="preference_logged_name">logged_name</string>
    <string name="preference_logged_email">logged_email</string>
    <string name="preference_logged_id">logged_id</string>
    <string name="preference_logged_picture_url">logged_picture_url</string>
    <string name="preference_logged_in_user_def_val">Anonymous</string>
</resources>
