<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    android:background="@drawable/border_bottom"
    android:color="@color/colorAccent"
    android:paddingBottom="15dp"
    android:paddingEnd="10dp"
    android:paddingStart="5dp"
    android:paddingTop="5dp">

    <ImageView
        android:id="@+id/comment_person_photo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/comment_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/comment_person_photo"
        android:text="@string/def_person_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/comment_item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/comment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/comment_person_photo"
        android:layout_toEndOf="@+id/comment_person_name"
        android:color="@color/implicit"
        android:gravity="end"
        android:text="@string/def_date"
        android:textSize="@dimen/text_size_small"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/comment_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/comment_person_name"
        android:layout_below="@+id/comment_person_name"
        android:text="@string/def_desc" />

</RelativeLayout>



