<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:name="com.kote.martin.wats.fragments.ForumAnswerFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/forum_answer_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/forum_question_details_person_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/forum_question_details_person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/forum_question_details_person_photo"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/forum_question_details_person_photo"
            android:text="@string/def_person_name"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forum_question_details_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/forum_question_details_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/forum_question_details_person_photo"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/forum_question_details_person_name"
            android:color="@color/implicit"
            android:gravity="end"
            android:text="@string/def_date"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/forum_question_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/forum_question_details_person_name"
            android:layout_below="@+id/forum_question_details_person_name"
            android:text="@string/def_desc"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_medium" />

    </RelativeLayout>

    <TextView
        android:id="@+id/forum_question_details_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forum_answer_holder"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/answers"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rv_forum_question_answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/forum_question_details_answers"
        tools:context=".fragments.ForumAnswersFragment"
        tools:listitem="@layout/list_item_forum_answer" />
</RelativeLayout>